Minor refactor in RectangleServiceTest